# test_ros_launch

./: README.md
my_package/: CMakeLists.txt  package.xml
my_package/launch/: simple_node.launch.py  simple_node_ros_args.launch.py
my_package/my_package/: simple_node.py  simple_node_ros_args.py
